refactor: 편의시설 상세조회 로직 개선
문자열 하나에 모든 추가 정보를 담아 보냈던 기존 방식을
서버에서 파싱하고 key-value형태로 묶어 보낸다.

그 외
- 파싱 기능 추가 (괄호 제거, 시간 포맷 변경)
- collect(Collectors.toList()) -> .toList()로 변경  : Java17을 쓰는 이유 중 하나인데, 깜빡하고 있었다...